Add Create, Read, Delete, and List Handlers for Data Source resource. (#17)